# toyChallenge

./: .gitignore  CMakeLists.txt  README.md
include/: instructionhandler.h  toyrobot.h
src/: instructionhandler.cpp  main.cpp  toyrobot.cpp
tests/: allcmds.txt  complex.txt  instructionhandlertests.cpp  instructionhandlertests.h  invalid.txt  toyrobottests.cpp  toyrobottests.h  unittests.cpp
